cmake_minimum_required(VERSION 3.0.0)
project(gui VERSION 0.1.0 LANGUAGES C CXX)
include_directories(/usr/include/freetype2)
include_directories(/usr/include)
include_directories(/etc/include/X11)
link_directories(/usr/include/freetype2)
link_directories(/usr/include)
link_directories(/etc/include/X11)
include(CTest)
enable_testing()
add_executable(gui src/main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
